--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,12 @@
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\nicolas.limacher\\.android\\debug.keystore')
+            storePassword 'NL4224$Kt'
+            keyAlias 'androiddebugkey'
+            keyPassword 'NL4224$Kt'
+        }
+    }
     namespace "com.mygdx.game"
     buildToolsVersion "34.0.0"
     compileSdkVersion 34
